--- a/prove/Develop02/Develop02.csproj
+++ b/prove/Develop02/Develop02.csproj
@@ -8,4 +8,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Tulpep.NotificationWindow" Version="1.1.38" />
+  </ItemGroup>
+
 </Project>
